k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krali4-frontend
  namespace: __NAMESPACE__
  labels:
    app: krali4-frontend
spec:
  type: ClusterIP
  selector:
    app: krali4-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: krali4-challenge
  namespace: __NAMESPACE__
  labels:
    app: krali4-challenge
spec:
  type: NodePort
  selector:
    app: krali4-challenge
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
